--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,177 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    box-sizing: border-box;
+  }
+  
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  [class*="col-"] {
+    float: left;
+    // padding: 15px;
+    width: 100%;
+  }
+  
+  .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 41.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 75%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 91.66%;}
+  .col-s-12 {width: 100%;}
+
+  .offset-s-1 {margin-left: 8.333333%}
+  .offset-s-2 {margin-left: 16.666667%}
+  .offset-s-3 {margin-left: 25%}
+  .offset-s-4 {margin-left: 33.333333%}
+  .offset-s-5 {margin-left: 41.666667%}
+  .offset-s-6 {margin-left: 50%}
+  .offset-s-7 {margin-left: 58.333333%}
+  .offset-s-8 {margin-left: 66.666667%}
+  .offset-s-9 {margin-left: 75%}
+  .offset-s-10 {margin-left: 83.333333%}
+  .offset-s-11 {margin-left: 91.666667%}
+  
+  @media only screen and (min-width: 480px) {
+  .col-s1-1 {width: 8.33%;}
+  .col-s1-2 {width: 16.66%;}
+  .col-s1-3 {width: 25%;}
+  .col-s1-4 {width: 33.33%;}
+  .col-s1-5 {width: 41.66%;}
+  .col-s1-6 {width: 50%;}
+  .col-s1-7 {width: 58.33%;}
+  .col-s1-8 {width: 66.66%;}
+  .col-s1-9 {width: 75%;}
+  .col-s1-10 {width: 83.33%;}
+  .col-s1-11 {width: 91.66%;}
+  .col-s1-12 {width: 100%;}
+
+  .offset-s1-1 {margin-left: 8.333333%}
+  .offset-s1-2 {margin-left: 16.666667%}
+  .offset-s1-3 {margin-left: 25%}
+  .offset-s1-4 {margin-left: 33.333333%}
+  .offset-s1-5 {margin-left: 41.666667%}
+  .offset-s1-6 {margin-left: 50%}
+  .offset-s1-7 {margin-left: 58.333333%}
+  .offset-s1-8 {margin-left: 66.666667%}
+  .offset-s1-9 {margin-left: 75%}
+  .offset-s1-10 {margin-left: 83.333333%}
+  .offset-s1-11 {margin-left: 91.666667%}
+  }
+  
+  @media only screen and (min-width: 641px) {
+    .col-m-1 {width: 8.33%;}
+    .col-m-2 {width: 16.66%;}
+    .col-m-3 {width: 25%;}
+    .col-m-4 {width: 33.33%;}
+    .col-m-5 {width: 41.66%;}
+    .col-m-6 {width: 50%;}
+    .col-m-7 {width: 58.33%;}
+    .col-m-8 {width: 66.66%;}
+    .col-m-9 {width: 75%;}
+    .col-m-10 {width: 83.33%;}
+    .col-m-11 {width: 91.66%;}
+    .col-m-12 {width: 100%;}
+  
+    .offset-m-1 {margin-left: 8.333333%}
+    .offset-m-2 {margin-left: 16.666667%}
+    .offset-m-3 {margin-left: 25%}
+    .offset-m-4 {margin-left: 33.333333%}
+    .offset-m-5 {margin-left: 41.666667%}
+    .offset-m-6 {margin-left: 50%}
+    .offset-m-7 {margin-left: 58.333333%}
+    .offset-m-8 {margin-left: 66.666667%}
+    .offset-m-9 {margin-left: 75%}
+    .offset-m-10 {margin-left: 83.333333%}
+    .offset-m-11 {margin-left: 91.666667%}
+    }
+
+    @media only screen and (min-width: 961px) {
+        .col-m1-1 {width: 8.33%;}
+        .col-m1-2 {width: 16.66%;}
+        .col-m1-3 {width: 25%;}
+        .col-m1-4 {width: 33.33%;}
+        .col-m1-5 {width: 41.66%;}
+        .col-m1-6 {width: 50%;}
+        .col-m1-7 {width: 58.33%;}
+        .col-m1-8 {width: 66.66%;}
+        .col-m1-9 {width: 75%;}
+        .col-m1-10 {width: 83.33%;}
+        .col-m1-11 {width: 91.66%;}
+        .col-m1-12 {width: 100%;}
+      
+        .offset-m1-1 {margin-left: 8.333333%}
+        .offset-m1-2 {margin-left: 16.666667%}
+        .offset-m1-3 {margin-left: 25%}
+        .offset-m1-4 {margin-left: 33.333333%}
+        .offset-m1-5 {margin-left: 41.666667%}
+        .offset-m1-6 {margin-left: 50%}
+        .offset-m1-7 {margin-left: 58.333333%}
+        .offset-m1-8 {margin-left: 66.666667%}
+        .offset-m1-9 {margin-left: 75%}
+        .offset-m1-10 {margin-left: 83.333333%}
+        .offset-m1-11 {margin-left: 91.666667%}
+        }
+    
+  @media only screen and (min-width: 1025px) {
+    .col-l-1 {width: 8.33%;}
+    .col-l-2 {width: 16.66%;}
+    .col-l-3 {width: 25%;}
+    .col-l-4 {width: 33.33%;}
+    .col-l-5 {width: 41.66%;}
+    .col-l-6 {width: 50%;}
+    .col-l-7 {width: 58.33%;}
+    .col-l-8 {width: 66.66%;}
+    .col-l-9 {width: 75%;}
+    .col-l-10 {width: 83.33%;}
+    .col-l-11 {width: 91.66%;}
+    .col-l-12 {width: 100%;}
+  
+    .offset-l-1 {margin-left: 8.333333%}
+    .offset-l-2 {margin-left: 16.666667%}
+    .offset-l-3 {margin-left: 25%}
+    .offset-l-4 {margin-left: 33.333333%}
+    .offset-l-5 {margin-left: 41.666667%}
+    .offset-l-6 {margin-left: 50%}
+    .offset-l-7 {margin-left: 58.333333%}
+    .offset-l-8 {margin-left: 66.666667%}
+    .offset-l-9 {margin-left: 75%}
+    .offset-l-10 {margin-left: 83.333333%}
+    .offset-l-11 {margin-left: 91.666667%}
+    }
+
+    @media only screen and (min-width: 1281px) {
+        .col-l1-1 {width: 8.33%;}
+        .col-l1-2 {width: 16.66%;}
+        .col-l1-3 {width: 25%;}
+        .col-l1-4 {width: 33.33%;}
+        .col-l1-5 {width: 41.66%;}
+        .col-l1-6 {width: 50%;}
+        .col-l1-7 {width: 58.33%;}
+        .col-l1-8 {width: 66.66%;}
+        .col-l1-9 {width: 75%;}
+        .col-l1-10 {width: 83.33%;}
+        .col-l1-11 {width: 91.66%;}
+        .col-l1-12 {width: 100%;}
+      
+        .offset-l1-1 {margin-left: 8.333333%}
+        .offset-l1-2 {margin-left: 16.666667%}
+        .offset-l1-3 {margin-left: 25%}
+        .offset-l1-4 {margin-left: 33.333333%}
+        .offset-l1-5 {margin-left: 41.666667%}
+        .offset-l1-6 {margin-left: 50%}
+        .offset-l1-7 {margin-left: 58.333333%}
+        .offset-l1-8 {margin-left: 66.666667%}
+        .offset-l1-9 {margin-left: 75%}
+        .offset-l1-10 {margin-left: 83.333333%}
+        .offset-l1-11 {margin-left: 91.666667%}
+        }
+    
+ 
