navbar and header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,10 +21,16 @@
 
   <div class="row">
       <div class="col-s-12 header" >
-          Header
+          <div class="logout">Logout</div>
        </div>
        <div class="col-s-2 navbar" >
-            navbar
+            <ul>
+              <li>Dashboard</li>
+              <li>Profile</li>
+              <li>Users</li>
+              <li>Teams</li>
+              <li>Settings</li>
+            </ul>
        </div>
        <div class="col-s-10 body" >
           body
