--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,29 @@
 .header{
-  background-color: rgba(45,45,45,0.98);
+  // background-color: rgba(45,45,45,0.98);
+  background-color: rgb(30, 30, 45);
   height: 44px;
 }
 
 .navbar{
-  background-color: rgba(45,45,45,0.98);
+  background-color: rgb(30, 30, 45);
   height: 100vh;
 }
 
 .body{
   height: 80vh;
-  // background-image: url(https://www.geeknoob.com/wp-content/uploads/Endgame-wallpapers-HD-Images-4K-Marvel-Studios-Avengers-Background.jpg);
-  border: 12px solid white;  
+}
+
+ul{
+  list-style: none;
+}
+
+li{
+  color: #ffffff;
+  margin: 50px;
+}
+
+.logout{
+  color: #ffffff;
+  float: right;
+  margin: 12px 28px;
 }
