--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
               <li>Settings</li>
             </ul>
        </div>
-       <div class="col-s-10 body" >
+       <div class="col-s-10 main" >
           body
      </div>
      <!-- <div class="col-s-12" [style.background-color]="'green'" [style.height]="'20vh'">
