--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,23 @@
-  <!-- <div class="row">
+  <div class="row">
+      <div class="col-s-12 header" >
+          <div class="logout">Logout</div>
+       </div>
+       <div class="col-s-4 col-s1-3 col-m-2 navbar" >
+            <ul>
+              <li>Dashboard</li>
+              <li>Profile</li>
+              <li>Users</li>
+              <li>Teams</li>
+              <li>Settings</li>
+            </ul>
+       </div>
+       <div class="col-s-8 col-s1-9 col-m-10 main" >
+          body
+     </div>
+  </div>
+
+
+    <!-- <div class="row">
     <div class="col-s-3 col-m-2 col-l-6" [style.background-color]="'red'">
       1
     </div>
@@ -18,26 +37,3 @@
       6
     </div>
   </div> -->
-
-  <div class="row">
-      <div class="col-s-12 header" >
-          <div class="logout">Logout</div>
-       </div>
-       <div class="col-s-2 navbar" >
-            <ul>
-              <li>Dashboard</li>
-              <li>Profile</li>
-              <li>Users</li>
-              <li>Teams</li>
-              <li>Settings</li>
-            </ul>
-       </div>
-       <div class="col-s-10 main" >
-          body
-     </div>
-     <!-- <div class="col-s-12" [style.background-color]="'green'" [style.height]="'20vh'">
-        footer
-   </div> -->
-  </div>
-
-
