--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,11 +15,13 @@
 
 ul{
   list-style: none;
+  padding-inline-start: 0px;
 }
 
 li{
   color: #ffffff;
-  margin: 50px;
+  margin: 50px 0;
+  text-align: center;
 }
 
 .logout{
