dashboard component created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,1 @@
-  <div class="row">
-      <div class="col-s-12 header" >
-          <div class="logout">Logout</div>
-       </div>
-       <div class="col-s-4 col-s1-3 col-m-2 navbar" >
-            <ul>
-              <li>Dashboard</li>
-              <li>Profile</li>
-              <li>Users</li>
-              <li>Teams</li>
-              <li>Settings</li>
-            </ul>
-       </div>
-       <div class="col-s-8 col-s1-9 col-m-10 main" >
-          body
-     </div>
-  </div>
+<app-dashboard></app-dashboard>
