--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,23 @@
-<p>
-  login works!
-</p>
+<div class='main '>
+
+  <div class="login-box ">
+      <div class="row">
+
+        <div class="offset-s-4 col-s-4 r-offset-s-4">
+          <div class="title">
+              Login
+          </div>
+        </div>
+
+      <input class="offset-s-3 col-s-6 r-offset-s-3" type="text">
+
+      <input class="offset-s-3 col-s-6 r-offset-s-3" type="text">
+
+      <button class="offset-s-4 col-s-4 r-offset-s-4">
+        Submit
+      </button>
+      
+  </div>
+
+</div>
+
