--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,6 +41,18 @@ body{
   .offset-s-9 {margin-left: 75%}
   .offset-s-10 {margin-left: 83.333333%}
   .offset-s-11 {margin-left: 91.666667%}
+
+  .r-offset-s-1 {margin-right: 8.333333%}
+  .r-offset-s-2 {margin-right: 16.666667%}
+  .r-offset-s-3 {margin-right: 25%}
+  .r-offset-s-4 {margin-right: 33.333333%}
+  .r-offset-s-5 {margin-right: 41.666667%}
+  .r-offset-s-6 {margin-right: 50%}
+  .r-offset-s-7 {margin-right: 58.333333%}
+  .r-offset-s-8 {margin-right: 66.666667%}
+  .r-offset-s-9 {margin-right: 75%}
+  .r-offset-s-10 {margin-right: 83.333333%}
+  .r-offset-s-11 {margin-right: 91.666667%}
   
   @media only screen and (min-width: 480px) {
   .col-s1-1 {width: 8.33%;}
@@ -67,6 +79,18 @@ body{
   .offset-s1-9 {margin-left: 75%}
   .offset-s1-10 {margin-left: 83.333333%}
   .offset-s1-11 {margin-left: 91.666667%}
+
+  .r-offset-s1-1 {margin-right: 8.333333%}
+  .r-offset-s1-2 {margin-right: 16.666667%}
+  .r-offset-s1-3 {margin-right: 25%}
+  .r-offset-s1-4 {margin-right: 33.333333%}
+  .r-offset-s1-5 {margin-right: 41.666667%}
+  .r-offset-s1-6 {margin-right: 50%}
+  .r-offset-s1-7 {margin-right: 58.333333%}
+  .r-offset-s1-8 {margin-right: 66.666667%}
+  .r-offset-s1-9 {margin-right: 75%}
+  .r-offset-s1-10 {margin-right: 83.333333%}
+  .r-offset-s1-11 {margin-right: 91.666667%}
   }
   
   @media only screen and (min-width: 641px) {
@@ -94,6 +118,18 @@ body{
     .offset-m-9 {margin-left: 75%}
     .offset-m-10 {margin-left: 83.333333%}
     .offset-m-11 {margin-left: 91.666667%}
+
+    .r-offset-m-1 {margin-right: 8.333333%}
+    .r-offset-m-2 {margin-right: 16.666667%}
+    .r-offset-m-3 {margin-right: 25%}
+    .r-offset-m-4 {margin-right: 33.333333%}
+    .r-offset-m-5 {margin-right: 41.666667%}
+    .r-offset-m-6 {margin-right: 50%}
+    .r-offset-m-7 {margin-right: 58.333333%}
+    .r-offset-m-8 {margin-right: 66.666667%}
+    .r-offset-m-9 {margin-right: 75%}
+    .r-offset-m-10 {margin-right: 83.333333%}
+    .r-offset-m-11 {margin-right: 91.666667%}
     }
 
     @media only screen and (min-width: 961px) {
@@ -121,6 +157,18 @@ body{
         .offset-m1-9 {margin-left: 75%}
         .offset-m1-10 {margin-left: 83.333333%}
         .offset-m1-11 {margin-left: 91.666667%}
+
+        .r-offset-m1-1 {margin-right: 8.333333%}
+        .r-offset-m1-2 {margin-right: 16.666667%}
+        .r-offset-m1-3 {margin-right: 25%}
+        .r-offset-m1-4 {margin-right: 33.333333%}
+        .r-offset-m1-5 {margin-right: 41.666667%}
+        .r-offset-m1-6 {margin-right: 50%}
+        .r-offset-m1-7 {margin-right: 58.333333%}
+        .r-offset-m1-8 {margin-right: 66.666667%}
+        .r-offset-m1-9 {margin-right: 75%}
+        .r-offset-m1-10 {margin-right: 83.333333%}
+        .r-offset-m1-11 {margin-right: 91.666667%}
         }
     
   @media only screen and (min-width: 1025px) {
@@ -148,6 +196,18 @@ body{
     .offset-l-9 {margin-left: 75%}
     .offset-l-10 {margin-left: 83.333333%}
     .offset-l-11 {margin-left: 91.666667%}
+
+    .r-offset-l-1 {margin-right: 8.333333%}
+    .r-offset-l-2 {margin-right: 16.666667%}
+    .r-offset-l-3 {margin-right: 25%}
+    .r-offset-l-4 {margin-right: 33.333333%}
+    .r-offset-l-5 {margin-right: 41.666667%}
+    .r-offset-l-6 {margin-right: 50%}
+    .r-offset-l-7 {margin-right: 58.333333%}
+    .r-offset-l-8 {margin-right: 66.666667%}
+    .r-offset-l-9 {margin-right: 75%}
+    .r-offset-l-10 {margin-right: 83.333333%}
+    .r-offset-l-11 {margin-right: 91.666667%}
     }
 
     @media only screen and (min-width: 1281px) {
@@ -175,6 +235,18 @@ body{
         .offset-l1-9 {margin-left: 75%}
         .offset-l1-10 {margin-left: 83.333333%}
         .offset-l1-11 {margin-left: 91.666667%}
+
+        .r-offset-l1-1 {margin-right: 8.333333%}
+        .r-offset-l1-2 {margin-right: 16.666667%}
+        .r-offset-l1-3 {margin-right: 25%}
+        .r-offset-l1-4 {margin-right: 33.333333%}
+        .r-offset-l1-5 {margin-right: 41.666667%}
+        .r-offset-l1-6 {margin-right: 50%}
+        .r-offset-l1-7 {margin-right: 58.333333%}
+        .r-offset-l1-8 {margin-right: 66.666667%}
+        .r-offset-l1-9 {margin-right: 75%}
+        .r-offset-l1-10 {margin-right: 83.333333%}
+        .r-offset-l1-11 {margin-right: 91.666667%}
         }
 
  /* Scroll bar code begins */
@@ -198,5 +270,5 @@ body{
   background: #333 !important;
 }
  /* Scroll bar code ends */
-    
+
  
