--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -5,6 +5,7 @@
   }
 
   .login-box{
+    overflow: auto;
     position: absolute;
     background-color: #FFFFFF;
     color: red;
@@ -64,3 +65,32 @@
     }
   }  
 
+a{
+  text-decoration: unset;
+  color: unset;
+}
+
+.mt{
+  margin-top: 10%;
+}
+
+input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+button{
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
