--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,18 +9,25 @@
           </h2>
         </div>
 
-        <div class="offset-s-3 col-s-6 r-offset-s-3 mt">
+        <div class="offset-s-2 col-s-8 r-offset-s-2 username">
+            <label for="uname"><b>Email Address</b></label>
             <input  type="text" placeholder="Username">
         </div>
 
-        <div class="offset-s-3 col-s-6 r-offset-s-3 mt">
+        <div class="offset-s-2 col-s-8 r-offset-s-2 password">
+            <label for="uname"><b>Password</b></label>
             <input type="text" placeholder="Password">
         </div>
 
-        <div class="offset-s-4 col-s-4 r-offset-s-4 mt">
+        <div class="offset-s-2 col-s-8 r-offset-s-2 ac-program">
+            <label for="uname"><b>A/C Program</b></label>
+            <input type="text" placeholder="Password">
+        </div>
+
+        <div class="offset-s-2 col-s-8 r-offset-s-2 ac-program ">
             <button >
                 <a [routerLink]="'/dashboard'">
-                  Submit
+                  Connenction
                 </a>
               </button>
         </div>
