--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -8,18 +8,13 @@
     overflow: auto;
     position: absolute;
     background-color: #FFFFFF;
-    color: red;
+    color: rgb(30, 30, 45);;
     top: 10vh;
     left: 10vw;
     height: 80vh;
     width: 80vw;
   }
 
-  .title{
-    text-align: center;
-  }
-
-  
   @media only screen and (min-width: 480px) {
     .login-box{
       top: 10vh;
@@ -65,14 +60,26 @@
     }
   }  
 
-a{
-  text-decoration: unset;
-  color: unset;
-}
+  .title{
+    text-align: center;
+  }
 
-.mt{
-  margin-top: 10%;
-}
+  a{
+     text-decoration: unset;
+     color: unset;
+   }
+
+    .username{
+      margin-top: 10px;
+    }
+    
+    .password{
+      margin-top: 10px;
+    }
+    
+    .ac-program{
+      margin-top: 10px;
+    }
 
 input {
   width: 100%;
