--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class='main '>
 
-  <div class="login-box ">
-      <div class="row">
+  <div class="login-box">
+      <div class="row login-box-content">
 
         <div class="offset-s-4 col-s-4 r-offset-s-4">
           <h2 class="title">
@@ -31,7 +31,11 @@
                 </a>
               </button>
         </div>
-     
+
+        <div class="offset-s-2 col-s-8 r-offset-s-2 disclaimer">
+            For a better experience, please ensure you are using Google Chrome browser.
+        </div>
+
   </div>
 
 </div>
