--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -81,6 +81,16 @@
       margin-top: 10px;
     }
 
+    .disclaimer{
+      margin-top: 10px;
+      border: 2px dashed #4CAF50;
+      padding: 20px
+    }
+
+    .login-box-content{
+      margin-top: 30px;
+    }
+
 input {
   width: 100%;
   padding: 12px 20px;
@@ -101,3 +111,4 @@ button{
   border-radius: 4px;
   cursor: pointer;
 }
+
